<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TeleportR</string>

    <string name="origin_hint">Here Am I.</string>
    <string name="destination_hint">There We Go!</string>
    <string name="search_hint">Where to beam today?</string>
    <string name="search_label">Station, Address, Name,..</string>
    <string name="search_settings_description">Places to beam..</string>

    <string name="dep_label">dep</string>
    <string name="arr_label">arr</string>
    <string name="orig_default">start</string>
    <string name="dest_default">destination</string>

    <string name="menu_about">About</string>
    <string name="menu_search">Search</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_scotty">Scotty</string>
    <string name="menu_refresh">Refresh</string>

    <string name="eco">eco</string>
    <string name="fun">fun</string>
    <string name="fast">fast</string>
    <string name="green">green</string>
    <string name="social">social</string>

    <string name="dialog_yes">Yeah!</string>
    <string name="dialog_no">Nope!</string>
    <string name="got_it">got it</string>
    
    <string name="explain_mock_plugin">This is just a mock plugin that provides fake search results.
    									\nPlease look at the github wiki on how to write your own (working) plugins...</string>

    <string name="autocompletion_settings_summary">cities, streets, stations, etc.</string>
    <string name="plugIns_settings_summary">where to search for results</string>
    <string name="downloads_activity_titel">Autocompletion downloads</string>
    <string name="inform_sdcard">Found teleportr data on your sdcard \nMenu->Refresh to download more..</string>
    <string name="downloads_fetch_progress">downloads for this area..</string>
    <string name="downloading_prog_dnld">downloading..</string>
    <string name="downloading_prog_indx">indexing..</string>
    <string name="download_error">Meest! something went wrong</string>
    <string name="quicksearch_settings_summary">enable global quick search</string>

    <string name="about">multi modal mobility browser \nfor customized websurfing of sites related to transportation. \n\nTeleportR is distributed under the GPL3v3 license.</string>
    <string name="copyright">(c) 2010 andlabs gbr, teleportr.org contributors. All rights reserverd.</string>
    <string name="subphcop">        UI + CD (c) 2010 subphisticated. All rights reserverd.</string>
    <string name="osm_attribution">Downloaded data (c) OpenStreetMap contributors CC-BY-SA license</string>
    
    <string name="accept">Accept</string>
    <string name="reject">Refuse</string>
    <string name="eula">\nTeleportR is free and independent software: \nyou can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, version 3 of the license or later
    \n\nTeleportR is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. For more details see \nhttp://www.gnu.org/licenses  \n\nAll downloaded map data (c) OpenStreetMap contributors, \nCC-BY-SA license.</string>
</resources>
